[package]
name = "ocptv"
version = "0.1.0"
description = "Strongly typed Rust API for OCPTV output"
authors = ["OCP Test & Validation Project"]
keywords = ["ocptv", "hardware", "validation"]
repository = "https://github.com/opencomputeproject/ocp-diag-core-rust"
license = "MIT"
edition = "2021"

[dependencies]
chrono = "0.4.38"
chrono-tz = "0.10.0"
derive_more = { version = "1.0.0", features = ["full"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "io-util",
    "fs",
    "sync",
] }

[dev-dependencies]
anyhow = "1.0.89"
assert-json-diff = "2.0.2"
